# dashboard

./: .gitignore  T3 Prompts Récents.numbers  T3_prompts_sample.csv  TestSupabase.py  add_user.py  app.py  debug_logfire.py  debug_project_inspector.py  exports_liciel_2sem.csv  gs.py  print_liciel.py  pyproject.toml  requirements.txt  test.py  test_certificate_validation.py  test_fix.py  test_liciel.py  verify_metrics.py
pages/: Comptes-utilisateurs.py  Diag-DPE-Audit.py  Divers.py  Home.py  Images.py  Login.py  Project_Inspector.py  Prompts.py  Transcriptions.py  debug.py
scripts/: __init__.py  analyze_api_usage.py  analyze_quality_samples.py  analyze_racing_strategy.py  check_weekly_prompts.py  debug_all_projects.py  debug_logfire_advanced.py  diag_list.py  diag_list_clean.py  generate_model_boxplot.py
src/: auth.py  auth_guard.py  bucket_helpers.py  data_sources.py  data_sources_csv.py  diagnostiqueurs_helpers.py  home_helpers.py  ui_theme.py  user_accounts_helpers.py
