[project]
name = "dashboard"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "logfire>=4.0.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "matplotlib>=3.9.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "supabase>=2.17.0",
    "streamlit-authenticator>=0.4.1",
    "urllib3<2.0"
]